# SE_PEAV

./: .env.example  .gitignore  PRESENTACION.md  QUICKSTART.md  README.md  demo.ps1  docker-compose.yml  run_tests.bat  run_tests.sh  start.bat  start.sh
01_ingest_layer/: Dockerfile  README.md  extract_exif.py  extract_frames.py  requirements.txt
02_geometry_engine/: CMakeLists.txt  Dockerfile  README.md  colmap_runner.py  train_3dgs.py
02_geometry_engine/src/: gaussian_utils.cpp  gaussian_utils.h
03_ai_analysis/: Dockerfile  README.md  analyze_structure.py  db_manager.py  detect_elements.py  requirements.txt  schema.sql
04_reporting_etl/: Dockerfile  README.md  generate_report.py  requirements.txt
04_reporting_etl/templates/: report_template.html
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_migration.py
backend/app/: main.py
backend/app/core/: config.py  database.py
backend/app/models/: project.py
backend/app/schemas/: project.py
backend/app/services/: e060_analysis.py  frame_extractor.py  geometry_engine.py  processing.py  report_generator.py  storage.py  yolo_detector.py
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_auth.py  test_e060_analysis.py  test_inspections.py  test_projects.py
mobile/: README.md  pubspec.yaml
mobile/android/app/: build.gradle.kts
mobile/ios/Runner/: Info.plist
mobile/ios/Runner.xcodeproj/: project.pbxproj
mobile/lib/: main.dart
mobile/test/: widget_test.dart
(+21 files in other folders)
